log
Thu 05 Oct 2023 07:13:10 PM UTC: 
 tests:  0|5
total_score: 0/70
fa74c36
Thu 05 Oct 2023 07:20:56 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
65bfad6
Thu 05 Oct 2023 07:30:28 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
497ee2c
Thu 05 Oct 2023 07:32:29 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
47c84e4
Thu 05 Oct 2023 07:32:49 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9628965
Thu 05 Oct 2023 07:33:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0934722
Thu 05 Oct 2023 07:33:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
85909de
Thu 05 Oct 2023 07:35:39 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
c0ee2ab
Thu 05 Oct 2023 07:36:26 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
62539d4
Thu 05 Oct 2023 07:37:04 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
10a9c2d
Thu 05 Oct 2023 07:38:40 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
792bf82
Thu 05 Oct 2023 07:38:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
01ce42b
Thu 05 Oct 2023 07:43:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7206d7f
Thu 05 Oct 2023 07:44:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
327fe84
Thu 05 Oct 2023 07:46:48 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
c01f640
Thu 05 Oct 2023 07:47:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
105037c
Thu 05 Oct 2023 07:47:34 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
e35b659
Thu 05 Oct 2023 07:48:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f277466
Thu 05 Oct 2023 07:50:30 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
280ce05
Thu 05 Oct 2023 07:50:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ce85671
Thu 05 Oct 2023 07:51:57 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
587e332
Thu 05 Oct 2023 07:52:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2b9e8f2
Thu 05 Oct 2023 07:53:45 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   54 |   Node * aux = n;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
fdd2b67
Thu 05 Oct 2023 07:53:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ed154ba
Thu 05 Oct 2023 07:54:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9a2715b
Thu 05 Oct 2023 07:55:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d7ff02d
Thu 05 Oct 2023 07:58:16 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
a83ef02
Sat 07 Oct 2023 09:37:52 PM UTC: 
 sudoku.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
b036ef3
Sat 07 Oct 2023 09:42:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1498468
Sat 07 Oct 2023 09:44:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:10: error: ‘aux’ undeclared (first use in this function)
   60 |       if(aux->sudo[i][t] == 0 ){
      |          ^~~
sudoku.c:60:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a622db2
Sat 07 Oct 2023 09:44:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
62a4006
Sat 07 Oct 2023 09:45:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7c6fc31
Sat 07 Oct 2023 09:45:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
02dc925
Sat 07 Oct 2023 09:46:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5cc33e5
Sat 07 Oct 2023 09:48:07 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1f38abf
Sun 08 Oct 2023 08:06:00 AM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:7: error: unused variable ‘filas’ [-Werror=unused-variable]
   47 |   int filas [10];
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
8155bb9
Sun 08 Oct 2023 08:06:09 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
573059f
Sun 08 Oct 2023 08:06:52 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
58743a3
Sun 08 Oct 2023 08:12:41 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e70e457
Sun 08 Oct 2023 08:12:56 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
869f638
Sun 08 Oct 2023 08:13:16 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c85bbed
Sun 08 Oct 2023 08:16:19 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
69d391f
Sun 08 Oct 2023 08:18:08 AM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
c2cff16
Sun 08 Oct 2023 08:19:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0488137
Sun 08 Oct 2023 08:19:31 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
82d8ab0
Sun 08 Oct 2023 08:22:10 AM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
7ebc8c5
Sun 08 Oct 2023 08:23:55 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
684b9e4
Sun 08 Oct 2023 08:24:52 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c58f4cb
Sun 08 Oct 2023 08:27:24 AM UTC: 
 sudoku.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
c021be4
